--- a/Map.html
+++ b/Map.html
@@ -7,7 +7,7 @@
     <base href="https://shajidarman.github.io/ISWU_MAP/" />
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.11.1/mapbox-gl.js"></script>
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.11.1/mapbox-gl.css" rel="stylesheet" />
-    <link href="https://shajidarman.github.io/ISWU_MAP/map.css" rel="stylesheet" type="text/css" />
+    <link href="map.css" rel="stylesheet" type="text/css" />
     <style>
         #map {
             width: 100%;
@@ -30,8 +30,8 @@
     const map = new mapboxgl.Map({
         container: 'map', // HTML element id where the map will be displayed
         style: 'mapbox://styles/leo193/cm4n8lfe8004t01r309qn5s2j', // New Mapbox style URL
-        center: [137.75, 35.75], // Center of the map (between Japan and South Korea)
-        zoom: 4 // Adjusted zoom level to show both countries
+        center: [10.4515, 51.1657], // Center of the map (between Japan and South Korea)
+        zoom: 3 // Adjusted zoom level to show both countries
     });
 
     // Coordinates
