--- a/Map.html
+++ b/Map.html
@@ -7,7 +7,7 @@
     <base href="https://shajidarman.github.io/ISWU_MAP/" />
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.11.1/mapbox-gl.js"></script>
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.11.1/mapbox-gl.css" rel="stylesheet" />
-    <link href="map.css" rel="stylesheet" type="text/css" />
+    <link href="https://shajidarman.github.io/ISWU_MAP/map.css" rel="stylesheet" type="text/css" />
     <style>
         #map {
             width: 100%;
