--- a/Map.html
+++ b/Map.html
@@ -122,9 +122,14 @@
     renderWorldCopies: false, // Disable infinite scrolling
 
     maxBounds: [
-        [-180, -60], // **Left Limit:** Stops at America/Canada (-180 longitude)
-        [135, 75],   // **Right Limit:** Stops **before white space appears** (135 longitude)
-    ],
+    [-200, -60], // Expand leftwards (-180 → -200)
+    [135, 75]
+],
+
+});
+
+map.on('load', function () {
+    map.setCenter([75, 30]); // Move it left forcefully
 });
 
      // Function to open custom popup modal
