--- a/Map.html
+++ b/Map.html
@@ -115,17 +115,16 @@
     const map = new mapboxgl.Map({
     container: 'map',
     style: 'mapbox://styles/leo193/cm4n8lfe8004t01r309qn5s2j',
-    center: [75, 30], // Centered over Asia, Europe, and Australia
+    center: [70, 30], // Shifted left from [90, 30]
     zoom: 1.8,
     minZoom: 1.8,
     maxZoom: 20,
-    renderWorldCopies: false, // Disable infinite scrolling
+    renderWorldCopies: false, 
 
     maxBounds: [
-    [-200, -60], // Expand leftwards (-180 → -200)
-    [135, 75]
-],
-
+        [-190, -60], // Shift left boundary to compensate (-180 → -190)
+        [125, 75]    // Shift right boundary to compensate (135 → 125)
+    ],
 });
 
 
