--- a/Map.html
+++ b/Map.html
@@ -144,7 +144,7 @@ html, body {
     minZoom: 1,
     maxZoom: 20,
     dragPan: false,
-    renderWorldCopies: false, 
+    renderWorldCopies: true, 
 
     maxBounds: [
         [-190, -70], // Shifted left boundary further left
